開發聊天室網路撈存檔 前端顯示有存檔之影片

--- a/templates/test.html
+++ b/templates/test.html
@@ -11,6 +11,12 @@
 
 </head>
 
+<style>
+    .border-success {
+        border-width:5px !important;
+    }
+</style>
+
 <body>
 
 <div class="container">
@@ -150,20 +156,36 @@
                     videodata.innerHTML = "";
 
                      var items = received_data['content'];
+                     var existVideos = received_data['checkVideo']
+                     var flag = false;
 
                      for(var i=0;i<items.length;i++){
                          var img_src = items[i].thumbnail_url;
-                         //img_src = img_src.substr(0,img_src.lastIndexOf('-')+1)+"1000x1000.jpg";
                          var format = img_src.substr(img_src.lastIndexOf('.'))
                          img_src = img_src.substr(0,img_src.lastIndexOf('-')+1)+"500x500"+format;
 
-                         videodata.innerHTML += '<div class="col-lg-4 mb-4"><div class="card h-100"><h5 class="card-header"><strong>'+items[i].title+'</strong></h5>' +
+                         for(var j=0;j<existVideos.length;j++){
+                             var videoid = existVideos[j];
+                             if(videoid == items[i].id){
+                                 flag = true;
+                                 break;
+                             }
+                         }
+                         if(flag){
+                            videodata.innerHTML += '<div class="col-lg-4 mb-4"><div class="card h-100 border border-success"><h5 class="card-header"><strong>'+items[i].title+'</strong></h5>' +
                              '<div class="card-body"><img src="'+img_src+'" width="300px" height="300px"></div>'+
                              '<div class="card-footer"><button class="btn btn-primary" onclick="watch('+items[i].id+')">Watch</button>' +'       '+
-                             '<button class="btn btn-warning" onclick="rec('+items[i].id+')">分析</button><hr>觀看次數: '+items[i].view_count+'<br>開台長度: '+items[i].duration+'<br>開台時間: '+items[i].created_at+'</div></div></div>';
-                         //console.log(img_src);
-                         //videodata.innerHTML += items[i].title+" , "+items[i].created_at+" , "+items[i].id+" , "+items[i].view_count;
-                        //videodata.innerHTML += "<br/>"
+                             '<button class="btn btn-warning" onclick="rec('+items[i].id+','+'\''+items[i].ename+'\''+')">分析</button><hr>觀看次數: '+items[i].view_count+'<br>開台長度: '+items[i].duration+'<br>開台時間: '+items[i].created_at+'</div></div></div>';
+
+                            flag = false;
+                         }else{
+                             videodata.innerHTML += '<div class="col-lg-4 mb-4"><div class="card h-100"><h5 class="card-header"><strong>'+items[i].title+'</strong></h5>' +
+                             '<div class="card-body"><img src="'+img_src+'" width="300px" height="300px"></div>'+
+                             '<div class="card-footer"><button class="btn btn-primary" onclick="watch('+items[i].id+')">Watch</button>' +'       '+
+                             '<button class="btn btn-warning" onclick="rec('+items[i].id+','+'\''+items[i].ename+'\''+')">分析</button><hr>觀看次數: '+items[i].view_count+'<br>開台長度: '+items[i].duration+'<br>開台時間: '+items[i].created_at+'</div></div></div>';
+                         }
+
+
                      }
 
                 }
@@ -192,11 +214,11 @@
         }
 
         /*message*/
-        rec = function (video_id) {
+        rec = function (video_id,user_name) {
             var message = confirm("確定要分析這部影片嗎?");
             if(message) {
                 console.log("true");
-                window.open("http://127.0.0.1:8003/show_result?id="+video_id);
+                window.open("http://127.0.0.1:8003/show_result?id="+video_id+"&username="+user_name);
             }
             else
                 console.log("false");
