--- a/templates/result.html
+++ b/templates/result.html
@@ -91,7 +91,7 @@
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script>
     var clouddata = {{  cloud_chat_comments | safe}};
-    alert(clouddata)
+    //alert(clouddata)
     var options = eval({
         "list": clouddata,
 
