改bug (snownlp(str) , text.length=0)

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,13 +13,13 @@
 {#                    <a class="nav-link" href="#">首頁</a>#}
 {#                </li>#}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">熱門關鍵詞繪圖</a>
+                    <a class="nav-link" href="#">熱門關鍵詞分析</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">你關心的關鍵詞</a>
+                    <a class="nav-link" href="#">關鍵詞影片推薦</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">為你推薦實況台</a>
+                    <a class="nav-link" href="#">新手入門</a>
                 </li>
 
 {#                <li class="nav-item dropdown">#}
