開發關鍵字影片推薦

--- a/templates/test.html
+++ b/templates/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Twitch聊天室關鍵詞分析</title>
+    <title>熱門關鍵詞分析</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -142,7 +142,7 @@
          $(document).on('click', 'a.btn_like_streamer', function () {
             progress.innerHTML = '讀取中 <progress id="p"></progress>';
             streamerid = $(this).attr('streamer_id');
-            //console.log(streamerid);
+            console.log(streamerid);
             showVideos(streamerid,videosCount);
         });
 
