--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,14 +13,12 @@
 {#                    <a class="nav-link" href="#">首頁</a>#}
 {#                </li>#}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">熱門關鍵詞分析</a>
+                    <a class="nav-link" href="{% url 'index' %}">熱門關鍵詞分析</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">關鍵詞影片推薦</a>
+                    <a class="nav-link" href="{% url 'keywordVideo' %}">關鍵詞影片推薦</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">新手入門</a>
-                </li>
+
 
 {#                <li class="nav-item dropdown">#}
 {#                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"#}
